fix(breadcrumb): allow breadcrumb items to wrap
on-behalf-of: @ithaka <dane.hillard@ithaka.org>

--- a/packages/pharos/src/components/breadcrumb/pharos-breadcrumb.scss
+++ b/packages/pharos/src/components/breadcrumb/pharos-breadcrumb.scss
@@ -4,6 +4,7 @@
 
   .breadcrumb {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     margin: 0;
     padding: 0;
